Default URL parameter for all HTTP status code, instead of just 200

--- a/WaybackDownloader.NET.CLI/WaybackDownloader.NET.CLI.csproj
+++ b/WaybackDownloader.NET.CLI/WaybackDownloader.NET.CLI.csproj
@@ -47,7 +47,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
