Corrected display output

--- a/WaybackDownloader.NET.CLI/WaybackDownloader.NET.CLI.csproj
+++ b/WaybackDownloader.NET.CLI/WaybackDownloader.NET.CLI.csproj
@@ -93,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
