Formalized document structures

--- a/WaybackDownloader.NET.CLI/WaybackDownloader.NET.CLI.csproj
+++ b/WaybackDownloader.NET.CLI/WaybackDownloader.NET.CLI.csproj
@@ -66,6 +66,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Archive.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
